--- a/console/Makefile
+++ b/console/Makefile
@@ -1,23 +1,21 @@
 APP_NAME = test
-APP_PATH = $(BIN_DIR)/$(APP_NAME)
-
-DIR_NAME = console
-DIR_OBJ_PATH = $(OBJ_DIR)/$(DIR_NAME)
+APP_PATH = $(APP_NAME)
 
 SRC = $(wildcard *.c)
-OBJ = $(patsubst %.c, $(DIR_OBJ_PATH)/%.o, $(SRC))
+OBJ = $(patsubst %.c, %.o, $(SRC))
 
 DEPS = $(OBJ:.o=.d)
 
-.PHONY: all obj_dir
-all: obj_dir $(APP_PATH)
--include $(DEPS)
+.PHONY: all clean
+all: $(APP_PATH)
 
-obj_dir:
-	@mkdir -p $(DIR_OBJ_PATH)
+-include $(DEPS)
 
 $(APP_PATH): $(OBJ)
 	$(CC) $(CFLAGS) -o $@ $^
 
-$(DIR_OBJ_PATH)/%.o: %.c
+%.o: %.c
 	$(CC) $(CFLAGS) $(DEPSFLAGS) -c -o $@ $<	
+
+clean:
+	@rm -rf $(OBJ) $(APP_PATH) $(DEPS)
