--- a/mySimpleComputer/Makefile
+++ b/mySimpleComputer/Makefile
@@ -9,9 +9,7 @@ OBJ = $(patsubst %.c, %.o, $(SRC))
 DEPS = $(OBJ:.o=.d)
 
 .PHONY: all 
-# all: $(LIB_PATH)
-all: 
-	@echo [INFO] $(LIB_NAME) is not implemented
+all: $(LIB_PATH)
 
 -include $(DEPS)
 
