Разработал бибиблиотеку myBigChars

--- a/myBigChars/Makefile
+++ b/myBigChars/Makefile
@@ -10,9 +10,7 @@ OBJ = $(patsubst %.c, %.o, $(SRC))
 DEPS = $(OBJ:.o=.d)
 
 .PHONY: all 
-# all: $(LIB_PATH)
-all: 
-	@echo [INFO] $(LIB_NAME) is not implemented
+all: $(LIB_PATH)
 
 -include $(DEPS)
 
