Разработал все функции для практической 4

--- a/console/Makefile
+++ b/console/Makefile
@@ -1,15 +1,21 @@
-APP_NAME = pr02
+APP_NAME = pr03
 APP_PATH = $(APP_NAME)
 
-SRC = $(wildcard *.c)
+APP_FONT = font
+
+ALL_SRC = $(wildcard *.c)
+SRC = $(subst font.c,,$(ALL_SRC))
 OBJ = $(patsubst %.c, %.o, $(SRC))
 
 DEPS = $(OBJ:.o=.d)
 
 .PHONY: all clean
-all: $(APP_PATH)
+all: $(APP_PATH) $(APP_FONT)
 
 -include $(DEPS)
+
+$(APP_FONT): font.o $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $^
 
 $(APP_PATH): $(OBJ) $(LIBS)
 	$(CC) $(CFLAGS) -o $@ $^
@@ -18,4 +24,4 @@ $(APP_PATH): $(OBJ) $(LIBS)
 	$(CC) $(CFLAGS) $(DEPSFLAGS) -c -o $@ $<	
 
 clean:
-	@rm -rf $(OBJ) $(APP_PATH) $(DEPS) $(APP_PATH)
+	@rm -rf $(OBJ) $(APP_PATH) $(DEPS) $(APP_PATH) *.[aod] $(APP_FONT)
