--- a/simpleassembler/Makefile
+++ b/simpleassembler/Makefile
@@ -1,6 +1,4 @@
-DIR_NAME = simpleassembler
-
-APP_NAME = $(DIR_NAME)
+APP_NAME = sat
 APP_PATH = $(APP_NAME)
 
 SRC = $(wildcard *.c)
@@ -9,14 +7,12 @@ OBJ = $(patsubst %.c, %.o, $(SRC))
 DEPS = $(OBJ:.o=.d)
 
 .PHONY: all 
-# all: $(APP_PATH)
-all: 
-	@echo [INFO] $(APP_NAME) is not implemented
+all: $(APP_PATH)
 
 -include $(DEPS)
 
 $(APP_PATH): $(OBJ)
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -g -o $@ $^
 
 %.o: %.c
 	$(CC) $(CFLAGS) $(DEPSFLAGS) -c -o $@ $<	
